# src/controllers/packages.ts
@@ -1,17 +1,19 @@
 import { NextFunction, Request, Response, Router } from 'express'
-import { db } from '../db'
+import { db, SortOrder } from '../db'
 import { AsyncHandlerResponse } from '../types'
 import { BaseController, responseBase } from './base'
 import { NotFoundError } from './errors'
 import { pkg as pkgsRepo } from '../models'
-import { authenticated, isAdmin, asyncWrap as aw } from '../middleware'
+import { asyncWrap as aw, authenticated, isAdmin, validator } from '../middleware'
+import { query, ValidationChain } from 'express-validator'
+import { SortFields } from '../models/package'
 
 export class PackagesController implements BaseController {
   private readonly path = '/packages'
 
   public getRouter(): Router {
     const router = Router()
-    router.get(`${this.path}`, authenticated, aw(this.getPackages))
+    router.get(`${this.path}`, authenticated, this.getPackagesParamsValidations(), validator, aw(this.getPackages))
     router.get(`${this.path}/:id`, authenticated, aw(this.getPackage))
     router.post(`${this.path}`, authenticated, isAdmin, aw(this.createPackage))
     router.put(`${this.path}/:id`, authenticated, isAdmin, aw(this.updatePackage))
@@ -19,8 +21,16 @@ export class PackagesController implements BaseController {
     return router
   }
 
+  private getPackagesParamsValidations = (): ValidationChain[] => ([
+    query('sort_by').optional().isIn(['name', 'price', 'credits']),
+    query('order').optional().isIn(['asc', 'desc']),
+  ])
+
   public getPackages = async (req: Request, res: Response): AsyncHandlerResponse => {
-    const plans = await pkgsRepo.findAll(null)
+    const plans = await pkgsRepo.findAll(null, {
+      field: req.query.sort_by as SortFields || SortFields.PRICE,
+      order: req.query.order as SortOrder || SortOrder.ASC,
+    })
 
     return res.status(200).json(responseBase(plans))
   }
