# src/controllers/subscriptions.ts
@@ -1,17 +1,19 @@
 import { NextFunction, Request, Response, Router } from 'express'
-import { db } from '../db'
+import { db, SortOrder } from '../db'
 import { AsyncHandlerResponse } from '../types'
 import { BaseController, responseBase } from './base'
 import { NotFoundError } from './errors'
 import { subscription as subscriptionsRepo } from '../models'
-import { authenticated, isAdmin, asyncWrap as aw } from '../middleware'
+import { authenticated, isAdmin, asyncWrap as aw, validator } from '../middleware'
+import { query, ValidationChain } from 'express-validator'
+import { SortFields } from '../models/subscription'
 
 export class SubscriptionsController implements BaseController {
   private readonly path = '/subscriptions'
 
   public getRouter(): Router {
     const router = Router()
-    router.get(`${this.path}`, authenticated, aw(this.getSubscriptions))
+    router.get(`${this.path}`, authenticated, this.getSubscriptionsParamsValidations(), validator, aw(this.getSubscriptions))
     router.get(`${this.path}/:id`, authenticated, aw(this.getSubscription))
     router.post(`${this.path}`, authenticated, isAdmin, aw(this.createSubscription))
     router.put(`${this.path}/:id`, authenticated, isAdmin, aw(this.updateSubscription))
@@ -19,8 +21,16 @@ export class SubscriptionsController implements BaseController {
     return router
   }
 
+  private getSubscriptionsParamsValidations = (): ValidationChain[] => ([
+    query('sort_by').optional().isIn(['name', 'price', 'credits']),
+    query('order').optional().isIn(['asc', 'desc']),
+  ])
+
   public getSubscriptions = async (req: Request, res: Response): AsyncHandlerResponse => {
-    const subscriptions = await subscriptionsRepo.findAll(null)
+    const subscriptions = await subscriptionsRepo.findAll(null, {
+      field: req.query.sort_by as SortFields || SortFields.PRICE,
+      order: req.query.order as SortOrder || SortOrder.ASC,
+    })
 
     return res.status(200).json(responseBase(subscriptions))
   }
